templates/datahub-gms_template.yaml
---
# Source: datahub-gms/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: datahub-gms-release-name
  labels:
    app: datahub-gms
    chart: datahub-gms-0.0.26
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: datahub-gms
      release: release-name
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - ports:
      - port: 8080
        protocol: TCP
      - port: 4318
        protocol: TCP      
  egress:
---
# Source: datahub-gms/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datahub-gms-release-name
  labels:
    app: datahub-gms
    chart: datahub-gms-0.0.26
    release: release-name
    heritage: Helm
spec:
  type: NodePort
  selector:
    app: datahub-gms
    routed_via: release-name
  ports:
    - name: http
      targetPort: 8080
      port: 8080
---
# Source: datahub-gms/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datahub-gms-release-name
  labels:
    app: datahub-gms
    chart: datahub-gms-0.0.26
    release: release-name
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: datahub-gms
      release: release-name
  replicas: 1
  template:
    metadata:
      labels:
        app: datahub-gms
        release: release-name
        routed_via: release-name
      annotations:
        checksum/secrets: 8f56588a52e9304eb5a62b302dc2861a5291d636a529fa3d7f8fe5715fced60f
        checksum/config: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        prometheus.io/scrape: "true"
        prometheus.io/port: "4318"        
    spec:
      containers:        
        # The main application container
        - name: datahub-gms-release-name
          image: "docker-registry.wikimedia.org/repos/data-engineering/datahub/gms:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 500m
              memory: 1G
            limits:
              cpu: 1
              memory: 2G
          
        
                
      volumes:        
          
        
        []
---
# Source: datahub-gms/templates/ingress.yaml
---
